other/restrict-scale/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: restrict-scale
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
